#NP# Added fetchDevices
